// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecondaryButton height has snapshot for type normal 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#3c3d3a",
      "borderRadius": 25,
      "borderWidth": 1,
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 8,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#3c3d3a",
        "fontFamily": "SharpSans-Bold",
        "fontSize": 12,
        "marginLeft": 4,
      }
    }
  >
    TEST
  </Text>
</View>
`;

exports[`SecondaryButton height has snapshot for type short 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#3c3d3a",
      "borderRadius": 21,
      "borderWidth": 1,
      "flexDirection": "row",
      "height": 42,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 8,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#3c3d3a",
        "fontFamily": "SharpSans-Bold",
        "fontSize": 12,
        "marginLeft": 4,
      }
    }
  >
    TEST
  </Text>
</View>
`;

exports[`SecondaryButton height has snapshot for type undefined 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#3c3d3a",
      "borderRadius": 25,
      "borderWidth": 1,
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 8,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#3c3d3a",
        "fontFamily": "SharpSans-Bold",
        "fontSize": 12,
        "marginLeft": 4,
      }
    }
  >
    TEST
  </Text>
</View>
`;

exports[`SecondaryButton renders for style dark 1`] = `[Function]`;

exports[`SecondaryButton renders for style light 1`] = `[Function]`;

exports[`SecondaryButton when state is disabled has a valid snapshot 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#3c3d3a",
      "borderRadius": 25,
      "borderWidth": 1,
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 8,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#3c3d3a",
        "fontFamily": "SharpSans-Bold",
        "fontSize": 12,
        "marginLeft": 4,
      }
    }
  >
    ACCEPT
  </Text>
</View>
`;

exports[`SecondaryButton when state is loading has a valid snapshot 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#3c3d3a",
      "borderRadius": 25,
      "borderWidth": 1,
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 8,
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#3c3d3a"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "alignSelf": "center",
        "position": "absolute",
      }
    }
  />
</View>
`;

exports[`SecondaryButton when state is normal has a valid snapshot 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#3c3d3a",
      "borderRadius": 25,
      "borderWidth": 1,
      "flexDirection": "row",
      "height": 50,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 8,
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/plus-sign.png",
      }
    }
    style={
      Array [
        Object {
          "marginRight": 4,
        },
        undefined,
      ]
    }
  />
  <Text
    style={
      Object {
        "color": "#3c3d3a",
        "fontFamily": "SharpSans-Bold",
        "fontSize": 12,
        "marginLeft": 4,
      }
    }
  >
    ACCEPT
  </Text>
</View>
`;
